Replace direct RSA file encryption with hybrid encryption.